<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speech recognizer</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="discover">Discover</string>
    <string name="continueRecognition">Continue</string>
    <string name="turn_on">Tap to turn on</string>
    <string name="turn_off">Tap to turn off</string>
    <string name="lampSwitchText">Lamp status is:</string>

</resources>
