<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/recognize_mic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_microphone" />

    <ToggleButton
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/pause"
        android:textOn="@string/continueRecognition" />

    <Button
        android:id="@+id/discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover" />

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="Add your command"
        tools:ignore="LabelFor" />

    <Switch
        android:id="@+id/lampSwitch"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:checked="false"
        android:text="@string/lampSwitchText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
